<resources>
    <string name="app_name">Weather</string>
    <string name="degree_celsius_symbol">°C</string>
    <string name="description_weather_condition_icon">weather condition icon</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_pressure">Pressure</string>
    <string name="label_visibility">Visibility</string>
    <string name="label_sunrise">Sunrise</string>
    <string name="label_today">Today</string>
    <string name="label_sunset">Sunset</string>
    <string name="registration_title">Registration</string>
    <string name="data_saved_sucess">Data Saved Successfully</string>
    <string name="data_fail_to_save">Data failed to save</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="search_city_weather">Search city\n</string>
    <string name="search_for_a_city">Search for city</string>
    <string name="today">Today</string>
    <string name="degrees">%s\u00B0</string>
    <string name="celsius">%s C\u00B0</string>
    <string name="humidity">Humidity: %s</string>
    <string name="pressure">Pressure: %s</string>
</resources>