<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:theme="@style/AppTheme.Toolbar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_find_city_weather"
                    style="@style/SearchViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/search_city_weather"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/text_label_search_for_city"
            style="@style/LabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/search_for_a_city"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />

        <ImageView
            android:id="@+id/image_city"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="64dp"
            android:scaleType="centerCrop"
            android:src="@drawable/city_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_label_search_for_city" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_showing_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                tools:visibility="visible"
                android:visibility="gone">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_searched_city_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:itemCount="1"
                    tools:listitem="@layout/list_item_searched_city_temperature" />

                <ImageView
                    android:id="@+id/image_weather_symbol"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@+id/text_todays_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text_label_today" />

                <TextView
                    android:id="@+id/text_label_today"
                    style="@style/LabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/today"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/image_weather_symbol"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view_searched_city_temperature" />

                <TextView
                    android:id="@+id/text_todays_date"
                    style="@style/TitleStyle12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/text_label_today"
                    app:layout_constraintTop_toBottomOf="@+id/text_label_today"
                    tools:text="Fri, 7 Sep" />

                <TextView
                    android:id="@+id/text_temperature"
                    style="@style/TitleStyle12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/black"
                    android:textSize="84sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_todays_date"
                    tools:text="28" />

                <TextView
                    android:id="@+id/text_label_degree"
                    style="@style/TitleStyle16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="\u2103"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/text_temperature"
                    app:layout_constraintTop_toTopOf="@+id/text_temperature" />

                <TextView
                    android:id="@+id/text_city_name"
                    style="@style/TitleStyle12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_temperature"
                    tools:text="Ajmer, Rajasthan" />

                <ImageView
                    android:id="@+id/image_weather_human_reaction"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginTop="16dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_city_name"
                    tools:srcCompat="@drawable/sunny_day" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>